--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,19 @@
+# Required to run your project under the correct environment.
 language: php
+
+# Versions of PHP you want your project run with.
 php:
-  - "5.4"
-  - "5.3"
-before_install:
-  - php /home/travis/.phpenv/versions/5.4.25/bin/composer.phar self-update
+  - 5.6
+
 before_script:
-  - composer install
-script: phpunit --configuration phpunit.xml --coverage-text
+  - composer self-update
+  - composer install --prefer-source --no-interaction --dev
+
+matrix:
+  allow_failures:
+    - php: 5.6
+
+  fast_finish: true
+
+script:
+  Tarjetas.php
