--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,10 @@ language: php
 php:
   - 5.6
 
-before_script:
-  - composer self-update
-  - composer install --prefer-source --no-interaction --dev
+
+#before_script:
+#  - composer self-update
+#  - composer install --prefer-source --no-interaction --dev
 
 matrix:
   allow_failures:
